# ai-platform-agents

./: .gitignore  README.md
.github/: dependabot.yml
bedrock-gateway/: .gitignore  Makefile  README.md  openapi.yaml
bedrock-gateway/infra/: api_gateway.tf  iam.tf  main.tf  outputs.tf  terraform.tf  variables.tf
bedrock-gateway/scripts/: build_lambda.sh
bedrock-gateway/services/gateway/: pyproject.toml  requirements.txt
bedrock-gateway/services/gateway/src/gateway/: __init__.py  common.py  executor_handler.py  health_handler.py  invoke_handler.py  status_handler.py
docs/: CONSOLIDATION-STATUS.md  DEMO-SCRIPT.md  SANITIZATION-PLAN.md  TELEMETRY-WALKTHROUGH.md  aws_handoff_bedrock_agents_gateway.md  gap_analysis_report.md  ghas-remediation-plan.md  solution_architecture.md  test-case-action-plan.md  test-case-findings.md  uaip_solution_architecture.md
rag-agent/: .gitignore  DEMO-SCRIPT.md  README.md  pyproject.toml
rag-agent/.devcontainer/: Dockerfile
rag-agent/infra/: main.apim.tf  main.container_app.tf  main.network.tf  terraform.tfvars.msdn  variables.tf
rag-agent/scripts/: loadtest_uc1.ps1  populate_index.py
supervisor-agent/: .gitignore  DEPLOYMENT-RUNBOOK.md  Makefile  README.md  docker-compose.yml  instructions.md
supervisor-agent/infra/: main.apim.tf  main.container_app.tf  main.entra.tf  main.identity.tf  outputs.tf  terraform.tf  terraform.tfvars.example  terraform.tfvars.msdn  variables.tf
supervisor-agent/services/supervisor-api/: .env.example  Dockerfile  agent.yaml  agents.yaml  main.py  pyproject.toml
supervisor-agent/services/supervisor-api/tests/: test_tc3_gateway_enforcement.py  test_tc4_tc6_validators.py  test_tc5_escalation_publish.py  test_tc5_sla_enforcement.py
supervisor-agent/services/supervisor-api/tools/: __init__.py  bedrock.py  compliance.py  escalation.py  governance.py  knowledge.py  sla.py  validators.py
(+14 files in other folders)
