[project]
name = "uaip-aws-agent-gateway"
version = "0.1.0"
description = "AWS-side Agent Gateway for AWS Agent Gateway for Unified AI Platform."
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
    "azure-monitor-opentelemetry-exporter>=1.0.0b31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "moto[dynamodb,lambda,bedrock]>=5",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
