[project]
name = "supervisor-api"
version = "0.2.1"
description = "Litware Energy UC2 — Multi-Agent Supervisor (Microsoft Agent Framework)"
requires-python = ">=3.12"
dependencies = [
    "agent-framework>=1.1.0,<2.0",
    # foundry-hosting is currently only published as alpha (1.0.0a*); accept pre-releases.
    "agent-framework-foundry-hosting>=1.0.0a0,<2.0",
    "azure-identity>=1.17.0,<2.0",
    "azure-monitor-opentelemetry>=1.6.0,<2.0",
    "httpx>=0.27.0,<1.0",
    "opentelemetry-api>=1.25.0,<2.0",
    "opentelemetry-instrumentation-httpx>=0.46b0",
    "pydantic>=2.0,<3.0",
    "python-dotenv>=1.0,<2.0",
    "pyyaml>=6.0,<7.0",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24.0,<1.0",
    "respx>=0.21.0,<1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["tools*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
